sensor data alignment fixed

--- a/SensorData/mainStyle.css
+++ b/SensorData/mainStyle.css
@@ -1,4 +1,4 @@
-html, body { height:100%; padding:0; margin:0; background:#f7f7f7; }
+html, body { height:100%; padding:0; margin:0; background:#ededed; }
 p{padding: 0;margin: 0}
 #title{
   font-family: 'Poiret One', cursive;
@@ -22,6 +22,15 @@ p{padding: 0;margin: 0}
   text-align: right;
   padding-right: 5%;
   font-weight: bold;
+
+}
+
+canvas {
+  padding-left: 0;
+     padding-right: 0;
+     margin-left: auto;
+     margin-right: auto;
+     display: block;
 
 }
 
